# hermesagent_S_Core

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
hermes-agent/: README.md
hermes-agent/profiles/marketing-ops/: PUBLISHING.md  RUNBOOK.md
hermes-agent/profiles/marketing-ops/skills/marketing-outreach-ops/: SKILL.md
hermes-agent/scripts/: bootstrap_marketing_profile.sh
hermesagent_S_Core/: CONTRIBUTING.md  README.md
hermesagent_S_Core/.github/: pull_request_template.md
hermesagent_S_Core/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
hermesagent_S_Core/profiles/marketing-ops/: SOUL.md
hermesagent_S_Core/scripts/: install_marketing_routines.sh
profiles/marketing-ops/: README.md  config.yaml
scripts/: export_marketing_pack.sh
src/hermes_agent/: __init__.py  config.py  db.py  llm.py  memory.py  models.py  self_improve.py  tasks.py
