[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent"
version = "0.1.0"
description = "Hermes: an AI marketing and outreach agent with memory, tasks, and self-improvement loops."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.45.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "duckduckgo-search>=6.2.0",
  "trafilatura>=1.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
hermes = "hermes_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

